--- a/TPs/TP_LEO/package.json
+++ b/TPs/TP_LEO/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "postprocessing": "^6.37.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
     "three": "^0.180.0"
   },
   "devDependencies": {
