--- a/TPs/TP_Lwiz/package.json
+++ b/TPs/TP_Lwiz/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^10.7.6",
+    "noisejs": "^2.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "three": "^0.180.0"
