--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,24 @@
-# Build / Output
-dist/
-build/
-.parcel-cache/
-.next/
-out/
-
-# Dépendances
-node_modules/
-
-# Environnements
-.env
-.env.*.local
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-*.log
+lerna-debug.log*
 
-# Systèmes / Éditeurs
-.DS_Store
-.vscode/
-.idea/
-*.swp
-
-# React / Vite / TS
-# Vite cache
-.vite/
-
-# TypeScript
-*.tsbuildinfo
-
-# Test coverage
-coverage/
-
-# Misc React
+node_modules
+dist
+dist-ssr
 *.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
